[gd_scene load_steps=16 format=3 uid="uid://6p31d3y1d7uc"]

[ext_resource type="Script" path="res://Scripts/Objects/Monitors/monitor.gd" id="1_qbnqy"]
[ext_resource type="AudioStream" uid="uid://coubjlbufx4sf" path="res://Audio/Objects/Monitors/yes.wav" id="2_so57g"]
[ext_resource type="Texture2D" uid="uid://c1i3mfdpaoo6c" path="res://Graphics/Objects/Monitors/icons.png" id="3_nbimd"]
[ext_resource type="Script" path="res://Scripts/Objects/Monitors/icon.gd" id="4_lw0mr"]
[ext_resource type="Texture2D" uid="uid://uh6k7e11s8ie" path="res://Graphics/Objects/Monitors/monitor.png" id="5_sd6a1"]
[ext_resource type="PackedScene" uid="uid://b72awigk0020g" path="res://Scenes/Particles/explosion.tscn" id="6_o85jr"]
[ext_resource type="Script" path="res://Scripts/Objects/solid_object.gd" id="8_tc0b3"]

[sub_resource type="Animation" id="Animation_vrm0v"]
resource_name = "destroyed"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_ccstj"]
resource_name = "idle"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v75xa"]
_data = {
"destroyed": SubResource("Animation_vrm0v"),
"idle": SubResource("Animation_ccstj")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_oyatq"]
animation = &"destroyed"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_3rkt6"]
animation = &"idle"

[sub_resource type="AnimationNodeTransition" id="AnimationNodeTransition_2khmp"]
input_0/name = "0"
input_0/auto_advance = false
input_0/reset = true
input_1/name = "1"
input_1/auto_advance = false
input_1/reset = true

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_qw55k"]
graph_offset = Vector2(-243.089, 32.734)
nodes/Animation/node = SubResource("AnimationNodeAnimation_3rkt6")
nodes/Animation/position = Vector2(80, 80)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_oyatq")
"nodes/Animation 2/position" = Vector2(60, 220)
nodes/output/position = Vector2(480, 160)
nodes/state/node = SubResource("AnimationNodeTransition_2khmp")
nodes/state/position = Vector2(260, 140)
node_connections = [&"output", 0, &"state", &"state", 0, &"Animation", &"state", 1, &"Animation 2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_de0jl"]
size = Vector2(28, 32)

[node name="MonitorLife" type="Node2D"]
script = ExtResource("1_qbnqy")
jingle_audio = ExtResource("2_so57g")
lives = 1
ground_layer = 3

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("3_nbimd")
hframes = 5
vframes = 3
frame = 10
script = ExtResource("4_lw0mr")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("5_sd6a1")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_v75xa")
}

[node name="AnimationTree" type="AnimationTree" parent="Sprite"]
tree_root = SubResource("AnimationNodeBlendTree_qw55k")
anim_player = NodePath("../AnimationPlayer")
parameters/state/current_state = "0"
parameters/state/transition_request = ""
parameters/state/current_index = 0

[node name="Explosion0" parent="." instance=ExtResource("6_o85jr")]
position = Vector2(0, -4)

[node name="SolidObject" type="StaticBody2D" parent="."]
script = ExtResource("8_tc0b3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SolidObject"]
shape = SubResource("RectangleShape2D_de0jl")

[connection signal="player_ceiling_collision" from="SolidObject" to="." method="_on_SolidObject_player_ceiling_collision"]
[connection signal="player_ground_collision" from="SolidObject" to="." method="_on_SolidObject_player_ground_collision"]
[connection signal="player_left_wall_collision" from="SolidObject" to="." method="_on_SolidObject_player_wall_collision"]
[connection signal="player_right_wall_collision" from="SolidObject" to="." method="_on_SolidObject_player_wall_collision"]
